; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_lomac/extr_mac_lomac.c_lomac_vnode_check_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_lomac/extr_mac_lomac.c_lomac_vnode_check_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { %struct.label* }
%struct.vnode = type { i32 }
%struct.label = type { i32 }
%struct.mac_lomac = type { i32 }

@lomac_enabled = common dso_local global i32 0, align 4
@revocation_enabled = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"reading\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"file\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ucred*, %struct.ucred*, %struct.vnode*, %struct.label*)* @lomac_vnode_check_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lomac_vnode_check_read(%struct.ucred* %0, %struct.ucred* %1, %struct.vnode* %2, %struct.label* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ucred*, align 8
  %7 = alloca %struct.ucred*, align 8
  %8 = alloca %struct.vnode*, align 8
  %9 = alloca %struct.label*, align 8
  %10 = alloca %struct.mac_lomac*, align 8
  %11 = alloca %struct.mac_lomac*, align 8
  store %struct.ucred* %0, %struct.ucred** %6, align 8
  store %struct.ucred* %1, %struct.ucred** %7, align 8
  store %struct.vnode* %2, %struct.vnode** %8, align 8
  store %struct.label* %3, %struct.label** %9, align 8
  %12 = load i32, i32* @lomac_enabled, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i32, i32* @revocation_enabled, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %14, %4
  store i32 0, i32* %5, align 4
  br label %35

18:                                               ; preds = %14
  %19 = load %struct.ucred*, %struct.ucred** %6, align 8
  %20 = getelementptr inbounds %struct.ucred, %struct.ucred* %19, i32 0, i32 0
  %21 = load %struct.label*, %struct.label** %20, align 8
  %22 = call %struct.mac_lomac* @SLOT(%struct.label* %21)
  store %struct.mac_lomac* %22, %struct.mac_lomac** %10, align 8
  %23 = load %struct.label*, %struct.label** %9, align 8
  %24 = call %struct.mac_lomac* @SLOT(%struct.label* %23)
  store %struct.mac_lomac* %24, %struct.mac_lomac** %11, align 8
  %25 = load %struct.mac_lomac*, %struct.mac_lomac** %11, align 8
  %26 = load %struct.mac_lomac*, %struct.mac_lomac** %10, align 8
  %27 = call i32 @lomac_dominate_single(%struct.mac_lomac* %25, %struct.mac_lomac* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %34, label %29

29:                                               ; preds = %18
  %30 = load %struct.mac_lomac*, %struct.mac_lomac** %10, align 8
  %31 = load %struct.mac_lomac*, %struct.mac_lomac** %11, align 8
  %32 = load %struct.vnode*, %struct.vnode** %8, align 8
  %33 = call i32 @maybe_demote(%struct.mac_lomac* %30, %struct.mac_lomac* %31, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), %struct.vnode* %32)
  store i32 %33, i32* %5, align 4
  br label %35

34:                                               ; preds = %18
  store i32 0, i32* %5, align 4
  br label %35

35:                                               ; preds = %34, %29, %17
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local %struct.mac_lomac* @SLOT(%struct.label*) #1

declare dso_local i32 @lomac_dominate_single(%struct.mac_lomac*, %struct.mac_lomac*) #1

declare dso_local i32 @maybe_demote(%struct.mac_lomac*, %struct.mac_lomac*, i8*, i8*, %struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
